[project]
name = "spinningup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "gymnasium[classic-control,other]>=1.2.0",
    "jax[cuda12]==0.5.3",
    "jaxlib==0.5.3",
    "numpy<2",
    "nvitop>=1.5.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]
